# triton_vs_cuda_fsa

./: .gitignore  LICENSE  README.md  comparison.ipynb  cuda_optimized_results_min_time.csv  cuda_results_min_time.csv  environment.yml  matrix_mul_cuda  matrix_mul_cuda.cu  matrix_mul_cuda_optimized.cu  matrix_mul_trition.py  requirements.txt  setup_env.sh  triton_results_min_time.csv  vactor_add.py  vector_add.cu
common/: CMakeLists.txt
common/benchmark/: benchmark_metrics.cpp  benchmark_metrics.h  cmdline.cpp  cmdline.h
common/data/tests/: edge_cases.txt  extended_tests.txt
common/include/: benchmark_metrics.h  cmdline.h  fsa_definition.h  fsa_engine.h  regex_conversion.h
common/src/: cmdline.cpp  regex_conversion.cpp  regex_conversion.h
common/test/: fsa_definition.h  test_case.cpp  test_case.h  test_cases.txt
cuda/: Makefile  fsa_engine_cuda  run_tests.sh
cuda/benchmarks/: benchmark_fsa.cu
cuda/include/: fsa_engine.h  nfa_definition.h
cuda/src/: cuda_fsa_engine.cu  cuda_fsa_engine.h  cuda_fsa_table_kernels.cu  cuda_matrix_ops.cu  cuda_matrix_ops.h  cuda_test_runner.cpp  cuda_utils.cu  cuda_utils.h  fsa_cuda.cu  fsa_engine.cu  fsa_engine.h  prova  prove.cu  test_manager.cu  test_manager.h
cuda/tests/: basic_tests.txt  edge_cases.txt  performance_tests.txt  safe_tests.txt
results/: benchmark_results.csv  benchmark_results_20250319_153636.csv  benchmark_results_20250319_154134.csv  benchmark_results_20250319_155203.csv  benchmark_results_20250320_005623.csv  benchmark_results_20250320_005734.csv  benchmark_results_20250320_010940.csv  benchmark_results_20250320_011618.csv  benchmark_results_20250320_105510.csv  benchmark_results_20250320_111728.csv  benchmark_results_20250320_111925.csv  benchmark_results_20250320_123132.csv  cuda_benchmark_20250320_190151.csv  cuda_benchmark_20250407_092642.csv  cuda_benchmark_20250407_093923.csv  cuda_matmul_benchmark_20250407_092647.csv  cuda_matmul_benchmark_20250407_093928.csv  cuda_matmul_benchmark_20250411_100702.csv  cuda_vecadd_benchmark_20250407_092647.csv  cuda_vecadd_benchmark_20250407_093928.csv  cuda_vecadd_benchmark_20250411_100702.csv  triton_benchmark_20250320_190155.csv  triton_benchmark_20250407_092645.csv  triton_benchmark_20250407_093925.csv  triton_matmul_benchmark_20250407_092648.csv  triton_matmul_benchmark_20250407_093930.csv  triton_matmul_benchmark_20250411_100703.csv  triton_vecadd_benchmark_20250407_092648.csv  triton_vecadd_benchmark_20250407_093930.csv  triton_vecadd_benchmark_20250411_100703.csv
scripts/: CMakeLists.txt  benchmark_collector.py  delete_benchmarks.py  delete_old_benchmarks.py  notebook.ipynb  run_benchmarks.py  run_tests.sh  setup_env.sh  test_regex_conversion.cpp  triton_vs_cuda_analysis.ipynb  triton_vs_cuda_analysis.py
src/gnn_layers/: benchmarks.py
src/gnn_layers/gcn/: gcn_triton.py
src/microbenchmarks/: benchmarks.py
src/microbenchmarks/gemm/: gemm_cuda.cu
tests/: CMakeLists.txt  run_tests.sh
tests/benchmarks/cuda/: CMakeLists.txt  benchmark_fsa  benchmark_fsa.cu  simple_benchmark.cu
tests/benchmarks/triton/: benchmark_fsa.py
tests/cases/: parser.py  test_case.cpp  test_case.h  test_cases.txt
tests/cuda/: CMakeLists.txt  cuda_test_runner.cpp
tests/matrix/: CMakeLists.txt  matrix_test_runner.cpp  triton_matrix_test_runner.py
tests/regex/: CMakeLists.txt  test_regex_conversion.cpp
tests/results/: cuda_benchmark_20250320_144004.csv
tests/triton/: setup_triton_test.txt  triton_test_runner.py
triton/benchmarks/: benchmark_fsa.py  benchmark_fsa_triton.py
triton/src/: fsa_engine_triton.py  triton_fsa_engine.py  triton_matrix_ops.py
vecchio/: matrix_mul_cuda_optimized  vector_add
